# jax-gw

./: .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  C_ell.ipynb  LICENCE.md  LICENSE  README.md  agwb.ipynb  astro_kernel.ipynb  index.html  mkdocs.yml  objects.inv  orbits.ipynb  pyproject.toml  quicktest.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  signal.ipynb
.github/workflows/: ci.yml  tests.yml
docs/: antenna.md  index.md  orbits.md  response.md  sky.md
jax_gw/detector/: orbits.py  pixel.py  response.py
jax_gw/signal/: plotting.py  response.py
jax_gw/sources/: waveforms.py
orbits/: index.html
response/: index.html
search/: search_index.json
sky/: index.html
src/jax_gw/detector/: orbits.py  overlap.py  pixel.py  response.py
src/jax_gw/detector/detectors/: README.md
src/jax_gw/pipes/: N_ell.py
src/jax_gw/signal/: agwb.py  plotting.py
src/jax_gw/sources/: waveforms.py
tests/: test_orbits.py  test_response.py
