[metadata]
name = jax_gw
description = Gravitational Waves in JAX
author = Ioannis Michaloliakos
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    jax_gw
install_requires =
    jax>=0.4.16
    jax-cosmo>=0.1.0
    jaxlib>=0.4.14
python_requires = ==3.9.*
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.4.3
    pytest-cov>=4.1.0

[options.package_data]
jax_gw = py.typed
