[metadata]
name = jax_gw
description = Gravitational Waves in JAX
author = Ioannis Michaloliakos
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages =
    jax_gw
install_requires =
    jax-cosmo>=0.1.0
    numpyro>=0.14.0
python_requires = ==3.12.*
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.4.3
    pytest-cov>=4.1.0

[options.package_data]
jax_gw = py.typed
